--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,6 @@ services:
         depends_on:
             - mongodb
     mongodb:
-        image: mongo:alpine
+        image: mongo:latest
         ports:
             - "27017:27017"
